# oscprompt

./: .gitmodules  CMakeLists.txt  Makefile  README  example.cpp  main.cpp  ports.h  render.cpp  render.h  snarf.cpp  synth.cpp
doc/: Guide.adoc
